# py-fdc

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  fdc.datatypes.rst  fdc.rst  index.rst  modules.rst
src/fdc/: __init__.py  fdc.py
src/fdc/datatypes/: AbridgedFood.py  AbridgedFoodNutrient.py  BrandedFood.py  ExperimentalFood.py  Food.py  FoodAttribute.py  FoodAttributeType.py  FoodCategory.py  FoodComponent.py  FoodGroup.py  FoodNutrient.py  FoodNutrientDerivation.py  FoodNutrientSource.py  FoodPortion.py  FoodSearchCriteria.py  FoodUpdateLog.py  FoundationFood.py  InputFood.py  InputFoodSurvey.py  InputFoods.py  LabelNutrient.py  MarketAcquisitionFood.py  MeasureUnit.py  Nutrient.py  NutrientAcquisitionDetails.py  NutrientAnalysisDetails.py  NutrientConversionFactor.py  RetentionFactor.py  SRLegacyFood.py  SampleFood.py  SearchResult.py  SearchResultFood.py  SurveyFood.py  WweiaFoodCategory.py  __init__.py
src/fdc/utils/: deserialization.py
test/: test_dataclass.py  test_raw_api_calls.py
tests/: list_expected.json  test_dataclass.py
