[project]
name = "py-fdc"
version = "0.0.1"
authors = [
  { name="Patrick Stephane Tawil"},
]
description = "A Python interface to interact with the USDA's FoodDataCentral API"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "requests",
  "pyhumps",
  "pytest"
]

[project.urls]
Homepage = "https://github.com/ghostiek/py-fdc"
Issues = "https://github.com/ghostiek/py-fdc/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"